Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

15-Sep-2010 Andrew Eddie
 # Fixed issue [#22125] We don't have CSS for system "warning" messages (Artyom Bisyarin, Elin Waring).

14-Sep-2010 Jean-Marie Simonet
 # [#22288] Content category - displaying title twice. Thanks Bill.
 $ [#22403] typo in installation language files. Thanks Brian and Bill.
 $ [#22404] typo in en-GB.com_users.ini language file. Thanks Brian and Bill.
 $ [#22405] typo in en-GB.ini language file. Thanks Brian and Bill.
 $ [#22407] us spelling in template language file. Thanks Brian and Bill.
 $ [#22408] language file capitalisation. Thanks Brian and Bill.
 $ [#22409] language file typos, spelling. Thanks Brian and Bill.
 $ [#22411] US spelling in plugin language file. Thanks Brian and Bill.
 $ [#22412] typo in en-GB.com_content.sys.ini language file. Thanks Brian and Bill.
 $ [#22413] extra capital in language file. Thanks Brian and Bill.
 $ [#22414] missing letter in language file. Thanks Brian and Bill.
 $ [#22406] typos in administrator en-GB.ini language file. Thanks Brian and Bill.
 $ [#22431] Incorrect English spellings (British/American differences). Thanks Chris.
 # [#22423] Patch: Typo in template style edit style-form give js error. Thanks Ole.
 $ [#22417] Improving sense of com_user parameters. Thanks Dennis and Bill.

13-Sep-2010 Christophe Demko
 # [#22106] Use Joomla.submitform() instead of submitform (thanks Rouven Weßling)
 # [#22280] Banner image can't be selected after upload

13-Sep-2010 Jean-Marie Simonet
 # [#22361] archive articles - pagination. Thanks Bill.
 $ [#22294] Newsflash Read more issue. Thanks Bill.
 $ [#22085] sending emails to new users not working correctly. Thanks Bill
 $ Normalizing redundant keys/values