@@ -356,7 +356,6 @@
 			type="textarea"
 			label="COM_CONFIG_FIELD_METADESC_LABEL"
 			description="COM_CONFIG_FIELD_METADESC_DESC"
-			required="true"
 			filter="string"
 			cols="60"
 			rows="3" />
@@ -366,7 +365,6 @@
 			type="textarea"
 			label="COM_CONFIG_FIELD_METAKEYS_LABEL"
 			description="COM_CONFIG_FIELD_METAKEYS_DESC"
-			required="true"
 			filter="string"
 			cols="60"
 			rows="3" />
